--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,22 @@
 {
   "compilerOptions": {
-    "allowJs": false,
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "isolatedModules": true,
-    "jsx": "react-jsx",
+    "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "noFallthroughCasesInSwitch": true,
     "module": "esnext",
     "moduleResolution": "node",
-    "noEmit": true,
     "resolveJsonModule": true,
-    "skipLibCheck": true,
-    "sourceMap": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "jsx": "react-jsx",
     "jsxImportSource": "@emotion/react",
-    "strict": true,
-    "strictFunctionTypes": true,
-    "target": "ES2017",
-    "noFallthroughCasesInSwitch": true
+    "downlevelIteration": true
   },
-  "exclude": ["node_modules", "build"],
-  "include": ["**/*.ts", "**/*.tsx"]
+  "include": ["src"]
 }
